--- a/style.css
+++ b/style.css
@@ -130,5 +130,66 @@ main{
 }
 
 .face-2{
+    background-image: linear-gradient(
+        60deg,
+        rgba(255,255,255,0.15),
+        rgba(255,255,255,0.05)
+    );
+}
+
+.header{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.wish{
+    color: #fff;
+    font-size: 1.4rem;
+}
+
+.features{
+    list-style: none;
+    margin: 3rem 0;
+    color: #eee;
+    font-weight: 300;
+}
+
+
+.heading{
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 1.3rem;
+    font-family: "Roboto Condensed", sans-serif;
+    margin-top: 0.5rem;
+}
+
+.features li{
+    margin-bottom: 0.3rem;
+}
+
+.color-wrap{
+    display: flex;
+    align-items: center;
+}
+
+.color-wrap > span{
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-right: 1.3rem;
+}
+
+.color{
+    display: inline-block;
+    width: 27px;
+    height:27px;
+    border-radius: 50%;
+    background-color: red;
+    margin-right: 0.6rem;
+    cursor: pointer;
+}
+
+.face-1{
     display: none;
 }
+
